# decode

./: .gitignore  LICENSE  README.md  bottomofthesea.py  decode.sh  preprocess.py  pyproject.toml  requirements.txt  setup.cfg
bottomofthesea.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
