[metadata]
name = bottomofthesea
version = 0.1.0
author = doublescoop
author_email = backslash.share@gmail.com
url = https://thelandatthebottomofthesea.com/
description = Decode hidden files in the video from the Land At The Bottom Of The Sea project
long_description = file: README.md

[options]
zip_safe = True
include_package_data = True
install_requires =
    opencv_python==4.6.0.66
    Pillow==9.3.0
    numpy==1.22.2
    pip==22.3.1


[options.entry_points]
console_scripts = 
    bottomofthesea = bottomofthesea.__main__:main


# [build-system]
# requires = ["setuptools"]
# build-backend = "setuptools.build_meta"